base/solution04/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution04
  namespace: tenant-example
  labels:
    app: solution04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution04
  template:
    metadata:
      labels:
        app: solution04
    spec:
      containers:
      - name: solution04
        image: 558232680640.dkr.ecr.us-east-1.amazonaws.com/example-repo:main-0
