base/solution04/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: solution04-service
  namespace: tenant-example
  labels:
    app: solution04
spec:
 selector:
   app: solution04
 type: ClusterIP  
 ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
